--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
 
   <div class="field">
     <%= f.label :username %><br />
-    <%= f.email_field :username, id: "user-username" %>
+    <%= f.text_field :username, id: "user-username" %>
   </div>
 
   <div class="field">
