--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -18,6 +18,7 @@ body {
 .instacard {
   border: 1px solid #ccc;
   width: 614px;
+  margin-bottom: 2rem;
 }
 
 .instacard-header {
@@ -58,6 +59,12 @@ body {
 .instacard-save-icon {
   padding: 8px;
   float: left;
+}
+
+.instacard-like-icon {
+  border: none;
+  background: none;
+  cursor: pointer;
 }
 
 .instacard-save-icon {
