Added multiple likes feature test

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -17,6 +17,6 @@
      <div class="clearfix"></div>
    </div>
    <div class="instacard-likes">
-     <%= post.likes %> like
+     <%= pluralize post.likes.count, "like" %>
    </div>
 </div>
