--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,13 +1,13 @@
-<div class="instacard">
+<div class="instacard" id="instacard-post-<%= post.id %>">
    <div class="instacard-body"><%= post.body %></div>
-   <div><%= image_tag post.file, class: "instacard-image" %></div>
+   <div><%= image_tag asset_path(rails_blob_path(post.file)), class: "instacard-image" %></div>
    <div>
      <% if post.liked?(current_user) %>
-      <%= button_to likes_path(post), class: "instacard-like-icon post-like" do %>
-        <%= image_tag "liked.png", class: "" %>
-      <% end %>
+       <%= button_to likes_path(post), class: "instacard-like-icon post-like" do %>
+         <%= image_tag "liked.png", class: "" %>
+       <% end %>
     <% else %>
-      <%= button_to likes_path(post), class: "instacard-like-icon post-like" do %>
+      <%= button_to likes_path(post), class: "instacard-like-icon post-like", data: { reflex: "click->PostReflex#like", id: post.id } do %>
         <%= image_tag "like.png", class: "" %>
       <% end %>
     <% end %>
@@ -16,7 +16,7 @@
      <%= image_tag "save.png", class: "instacard-save-icon" %>
      <div class="clearfix"></div>
    </div>
-   <div class="instacard-likes">
+   <div class="instacard-likes" id="instacard-post-<%= post.id %>-likes">
      <%= pluralize post.likes.count, "like" %>
    </div>
 </div>
