--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,32 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= link_to "Sign up", new_user_registration_path, id: "user-signup" %>
-    <%= link_to "Sign out", destroy_user_session_path, method: :delete, id: "user-signout" %>
-    <%= link_to "Sign in", new_user_session_path, id: "user-signin" %>
-    <%= yield %>
+    <nav class="">
+      <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+        <div class="relative flex items-center justify-between h-16">
+          <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+          </div>
+          <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+            <div class="flex-shrink-0 flex items-center">
+              <%= link_to "InstaCard", root_path %>
+            </div>
+          </div>
+          <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+            <% if user_signed_in? %>
+              <%= link_to "Sign out", destroy_user_session_path, method: :delete, id: "user-signout", class: "m-4" %>
+            <% else %>
+              <%= link_to "Sign up", new_user_registration_path, id: "user-signup", class: "m-4" %>
+              <%= link_to "Sign in", new_user_session_path, id: "user-signin", class: "m-4" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <div class="w-1/2 m-auto">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+    </div>
   </body>
 </html>
